--- a/crm/package.json
+++ b/crm/package.json
@@ -1,8 +1,11 @@
 {
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-router": "^0.0.1",
+    "jsonwebtoken": "^8.5.1",
     "pg": "^8.7.1"
   }
 }
